--- a/style.css
+++ b/style.css
@@ -565,7 +565,7 @@ transition: 1000s ease-out;
 right: 18px;
     transform: translateY(-50%);
     border: 1px solid #ccc;
-    border-right: 0;
+    border-left: 0;
     border-radius: 5px 0 0 5px;
     padding: 30px 15px;
   cursor: pointer;
