--- a/style.css
+++ b/style.css
@@ -381,7 +381,6 @@ margin-left: 4px;
   height: 100vh;
   position: relative;
   background: rgba(0, 0, 0, 0.1);
-  /* opacity: 0.5; */
   z-index: 10;
 }
 .mobile-menu_container {
@@ -393,8 +392,10 @@ margin-left: 4px;
 }
 .menu-hello {
   display: flex;
-  gap: 16px;
-  background-color: #111;
+  width: 100%;
+  height: 35px;
+  gap: 12px;
+  background-color: rgb(35,47,62);
   padding: 16px;
   color: #fff;
 }
@@ -410,11 +411,14 @@ margin-left: 4px;
   color: #fff;
 }
 
-.menu-trending {
-  padding: 16px;
+.menu {
+  padding: 24px;
 }
 .mobile-menu a {
-  color: #111;
+  color: rgb(35,47,62);
+}
+.mobile-menu a:hover {
+  text-decoration: rgb(35,47,62) underline;
 }
 
 /* Mainbody - Banner */
