--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ a {
 
 button {
   border: none;
+  cursor: pointer;
+  color: #ffffff;
 }
 
 ul , li {
@@ -45,8 +47,10 @@ ul , li {
   margin: 0;
 }
 
+
 li {
   list-style: none;
+  /*    transition: border 0.4s;  */
 }
 
 .border-white {
@@ -336,7 +340,7 @@ p {
   align-items: center;
   padding-inline: 25px;
   background-color: rgb(35, 47, 61);
-  color: #fff;
+  color: #ffffff;
   height: 37px;
 }
 
@@ -356,7 +360,6 @@ margin-left: 4px;
   padding: 4px 2px;
 }
 .menu-all i {
-
   color: #ffffff;
 }
 
@@ -376,12 +379,18 @@ margin-left: 4px;
 
 
     /* SIDE-BAR NAV */
-.mobile-menu {
+#mobile-menu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
   width: 100%;
   height: 100vh;
-  position: relative;
-  background: rgba(0, 0, 0, 0.1);
-  z-index: 10;
+  transform: translateX(-100%);
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 12;
 }
 .mobile-menu_container {
   position: relative;
@@ -392,9 +401,10 @@ margin-left: 4px;
 }
 .menu-hello {
   display: flex;
+  align-items: center;
   width: 100%;
-  height: 35px;
-  gap: 12px;
+  height: 62px;
+  gap: 10px;
   background-color: rgb(35,47,62);
   padding: 16px;
   color: #fff;
@@ -408,17 +418,38 @@ margin-left: 4px;
   padding: 2px;
 }
 .menu-hello h2 {
+  font-size: 18px;
   color: #fff;
 }
 
 .menu {
+  width: 100%;
   padding: 24px;
 }
-.mobile-menu a {
-  color: rgb(35,47,62);
+
+.mobile_menu a {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  color: rgb(35, 47, 62);
 }
-.mobile-menu a:hover {
+.mobile_menu a:hover {
   text-decoration: rgb(35,47,62) underline;
+}
+.close-btn {
+  margin: 7px 0px 0px 15px;
+  height: max-content;
+}
+.close-btn i {
+  cursor: pointer;
+  /* width: 13px; */
+  color: #fff;
+  font-size: 24px;
+}
+
+.show-menu {
+  transform: translateX(0%);
 }
 
 /* Mainbody - Banner */
@@ -736,9 +767,11 @@ right: 18px;
   align-items: center;
 }
 
-.signup-sect p, a {
-  font-size: 12px;
-  margin-right: 4px;
+.signup-sect a {
+    color: black;
+    font-size: 11px;
+    font-weight: 400;
+    margin-right: 4px;
 }
 
 
